---------------------------------------------------------------------------------------------------
Version: 0.7.1
Date: 2021-06-16
  Features:
    - Ja locale updates from Sakuro
---------------------------------------------------------------------------------------------------
Version: 0.7.0
Date: 2021-06-16
  Features:
    - Recipe bypass setting
  Changes:
    - Polish localization tweaks, thanks to user TheoMarque
---------------------------------------------------------------------------------------------------
Version: 0.6.14
Date: 2021-06-02
  Features:
    - ja localization thanks to Sakuro
---------------------------------------------------------------------------------------------------
Version: 0.6.13
Date: 2021-05-23
  Features:
    - Zombies compatibility
---------------------------------------------------------------------------------------------------
Version: 0.6.12
Date: 2021-05-22
  Features:
    - Polish localization, thanks to user TheoMarque
---------------------------------------------------------------------------------------------------
Version: 0.6.11
Date: 2021-05-01
  Features:
    - Russian localization, thanks to user Spectrus1702
---------------------------------------------------------------------------------------------------
Version: 0.6.10
Date: 2021-04-30
  Features:
    - German localization, thanks to user yokmp
---------------------------------------------------------------------------------------------------
Version: 0.6.9
Date: 2021-04-13
  Fixes:
    - Recipe fix for deadlock stacked recipes + K2
---------------------------------------------------------------------------------------------------
Version: 0.6.8
Date: 2021-04-12
  Changes:
    - Reduce silicon/wafer needs for first tier modules.
---------------------------------------------------------------------------------------------------
Version: 0.6.7
Date: 2021-04-11
  Changes:
    - Added experimental setting to not use crushed stone with Bio Industries.