@@ -2,7 +2,8 @@
 Version: 0.7.1
 Date: 2021-06-16
   Features:
-    - Ja locale updates from Sakuro
+    - ja locale updates from Sakuro
+    - Mod Mash Electronics recipes
 ---------------------------------------------------------------------------------------------------
 Version: 0.7.0
 Date: 2021-06-16
